--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -17,11 +17,11 @@ texture_format/etc2=false
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
-application/icon=""
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
+application/icon="C:/Users/Jason Maa/Documents/Godot/projects3/installMoreRam/game_logo0000.ico"
+application/file_version="0.0.1"
+application/product_version="0.0.1"
+application/company_name="Escapegoat"
+application/product_name="Install More Ram"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
